--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -621,7 +621,7 @@ code {
   font-family: "Lucida Sans", Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
   color: #666;
   font-size: 13px;
-  margin: 0 4px;
+  margin: 0 0px;
   padding: 4px 6px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -629,6 +629,8 @@ code {
   -ms-border-radius: 2px;
   -khtml-border-radius: 2px;
   border-radius: 2px;
+  border: solid 1px #ccc;
+  white-space:nowrap;
 }
 
 pre {
