--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,12 @@
             </div>
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/odinserj/HangFire">Sources on GitHub</a></li>
+                {% assign url = page.url|remove:'index.html' %}
+                {% for link in site.navigation %}
+                <li {% if url == link.url %}class="active"{% endif %}>
+                  <a href="{{link.url}}" title="{{link.title}}">{{link.text}}</a>
+                </li>
+                {% endfor %}
               </ul>
             </div>
           </div>
