Point to a new discussion site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,30 +43,10 @@
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="http://docs.hangfire.io/">Overview</a></li>
-                    <li><a href="http://docs.hangfire.io/en/latest/features.html">Features</a></li>
-                    <li><a href="http://docs.hangfire.io/en/latest/tutorials/index.html">Tutorials</a></li>
-                    <li class="divider"></li>
-                    <li><a href="https://github.com/odinserj/HangFire/releases">Release Notes</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li role="presentation" class="dropdown-header">General</li>
-                    <li><a href="https://groups.google.com/forum/?hl=en#!forum/hangfire_net">Google Groups Forum</a></li>
-                    <li><a href="https://jabbr.net/#/rooms/HangFire">#HangFire on JabbR</a></li>
-                    <li><a href="https://twitter.com/hangfire_net">@hangfire_net on Twitter</a></li>
-                    <li class="divider"></li>
-                    <li role="presentation" class="dropdown-header">Development</li>
-                    <li><a href="https://github.com/odinserj/HangFire/issues">GitHub Issues</a></li>
-                  </ul>
-                </li>
+                <li><a href="http://docs.hangfire.io">Documentation</a></li>
+                <li><a href="http://discuss.hangfire.io">Community</a></li>
                 <li><a href="https://www.nuget.org/packages?q=HangFire">NuGet Packages</a></li>
-                <li><a href="https://github.com/odinserj/HangFire">Sources</a></li>
+                <li><a href="https://github.com/odinserj/HangFire">Sources on GitHub</a></li>
               </ul>
             </div>
           </div>
