--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
             </div>
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a></li>
+                <li><a href="http://odinserj.net">Blog</a></li>
                 <li><a href="http://docs.hangfire.io">Documentation</a></li>
                 <li><a href="http://discuss.hangfire.io">Forum</a></li>
                 <li><a href="https://www.nuget.org/packages?q=HangFire">NuGet Packages</a></li>
