--- a/css/styles.css
+++ b/css/styles.css
@@ -42,24 +42,14 @@ body {
     right: 30%;
 }
 
-#screenshots {
-    border-radius: 3px;
-    box-shadow: 0 0 3px #777;
-}
-
-#screenshots .carousel-control {
-    border-radius: 3px;
-}
-
 #screenshots .carousel-indicators {
-    bottom: -45px;
+    bottom: -19px;
 }
 
 #screenshots img {
-    border-radius: 5px;
-    width: 400px;
-    height: 221px;
-    background-color: #fff;
+    width: 500px;
+    height: 297px;
+    background-color: transparent;
 }
 
 .nuget-install {
