Facebook share button

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,3 +185,8 @@ pre .comm {
 }
 
 [id^=___plusone] { width:75px !important; }
+
+.fb-share-button {
+    vertical-align: top;
+    margin-right: 15px;
+}
