--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/css/lightbox.css" rel="stylesheet">
         <link href="/css/vs.css" rel="stylesheet">
         <link href="/css/styles.css" rel="stylesheet">
 
@@ -76,6 +77,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/lightbox.min.js"></script>
         <script src="/js/highlight.pack.js"></script>
         <script>hljs.initHighlightingOnLoad();</script>
     </body>
