--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,8 @@
                 <li><a href="http://odinserj.net">Blog</a></li>
                 <li><a href="http://docs.hangfire.io">Documentation</a></li>
                 <li><a href="http://discuss.hangfire.io">Forum</a></li>
-                <li><a href="https://www.nuget.org/packages?q=HangFire">NuGet Packages</a></li>
-                <li><a href="https://github.com/odinserj/HangFire">Sources on GitHub</a></li>
+                <li><a href="https://www.nuget.org/packages?q=Hangfire">NuGet Packages</a></li>
+                <li><a href="https://github.com/HangfireIO/Hangfire">Sources on GitHub</a></li>
               </ul>
             </div>
           </div>
