--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,14 +63,14 @@
         </nav>
 
         {{ content }}        
-
-        <div class="container">
-          <hr>
-
-          <footer>
-            <p>&copy; 2013-2014 <a href="https://github.com/odinserj">Sergey Odinokov</a></p>
-          </footer>
-        </div> <!-- /container -->
+        
+        <footer>
+          <div class="container">
+            <p>
+              Hangfire &copy; 2013-2014 <a href="https://github.com/odinserj">Sergey Odinokov</a>
+            </p>
+          </div>
+        </footer> 
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
