Add some pages for Russian version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link href="/css/lightbox.css" rel="stylesheet">
+        <link href="/css/highlight.css" rel="stylesheet">
         <link href="/css/styles.css" rel="stylesheet">
 
         <!--[if lt IE 9]>
@@ -67,6 +68,11 @@
         
         <footer>
           <div class="container">
+            <p class="pull-right">
+              <span>English</span>
+              &bull;
+              <a href="/ru/">Русский</a>
+            </p>
             <p>
               Hangfire &copy; 2013-2014 <a href="https://github.com/odinserj">Sergey Odinokov</a>
             </p>
