--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -8,6 +8,7 @@
 
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link href="/css/lightbox.css" rel="stylesheet">
+        <link href="/css/highlight.css" rel="stylesheet">
         <link href="/css/styles.css" rel="stylesheet">
 
         <!--[if lt IE 9]>
@@ -25,7 +26,7 @@
 
 </script>
     </head>
-    <body>
+    <body data-spy="scroll" data-target=".features-sidebar" data-offset="1">
 
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -46,16 +47,20 @@
                 <span class="icon-bar"></span>
               </button>
               {% if page.display_brand %}
-              <a class="navbar-brand" href="/">
+              <a class="navbar-brand" href="/ru/">
                 {{ site.name }}
               </a>
               {% endif %}
             </div>
             <div class="collapse navbar-collapse">
+
+              {% assign current = page.url | downcase | split: '/' %}
+
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="http://odinserj.net">Блог</a></li>
+                <li><a href="/ru/features.html">Возможности</a></li>
                 <li><a href="http://docs.hangfire.io">Документация</a></li>
                 <li><a href="http://discuss.hangfire.io">Форум</a></li>
+                <li><a href="http://odinserj.net">Блог</a></li>
                 <li><a href="https://www.nuget.org/packages?q=Hangfire">NuGet пакеты</a></li>
                 <li><a href="https://github.com/HangfireIO/Hangfire">Исходники на GitHub</a></li>
               </ul>
@@ -67,6 +72,11 @@
         
         <footer>
           <div class="container">
+            <p class="pull-right">
+              <a href="/">English</a>
+              &bull;
+              <span>Русский</span>
+            </p>
             <p>
               Hangfire &copy; 2013-2014 <a href="https://github.com/odinserj">Сергей Одиноков</a>
             </p>
