--- a/css/styles.css
+++ b/css/styles.css
@@ -209,3 +209,40 @@ footer {
     margin-top: 20px;
     padding: 20px 0 10px;
 }
+
+a.anchor { 
+    display: block; 
+    position: relative; 
+    top: -50px; 
+    visibility: hidden;
+}
+
+.features-sidebar.affix {
+    position: fixed;
+    top: 80px;
+}
+
+.features-sidebar.affix-bottom {
+    position: absolute;
+}
+
+.features-sidebar {
+    width: 263px;
+}
+
+.nav-sidebar>li>a {
+    padding: 5px 20px;
+}
+
+.nav-sidebar>li.active>a {
+    background-color: #428bca;
+    color: #fff;
+}
+
+.jumbotron-small h1 {
+    margin-top: 10px;
+}
+
+.first-header {
+    margin-top: 0;
+}
