Explicit urls for buttons

--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -14,7 +14,7 @@
 
 <span class="fb-share-button" data-href="http://hangfire.io" data-type="button_count"></span>
 
-<span class="g-plusone" data-size="medium"></span>
+<span class="g-plusone" data-size="medium" data-href="http://hangfire.io"></span>
 
                     <iframe src="http://ghbtns.com/github-btn.html?user=HangfireIO&repo=Hangfire&type=watch&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="89" height="20"></iframe>
@@ -28,7 +28,7 @@
   })();
 </script>
 
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfire_net">Tweet</a>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfire_net" data-url="http://hangfire.io">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </p>
             </div>
