--- a/_includes/pro/buy-ru.html
+++ b/_includes/pro/buy-ru.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
     <div class="panel-body" style="text-align: center;padding: 25px;">
         <div style="font-size: 30px;margin-bottom: 15px;">
-            499$ в год
+            14 990 р. в год
         </div>
 
         <form action="https://rbkmoney.ru/acceptpurchase.aspx" name="pay" method="POST">
