--- a/_includes/pro/buy-ru.html
+++ b/_includes/pro/buy-ru.html
@@ -15,6 +15,8 @@
 
             <input style="display: block;width: 100%;" class="btn btn-success" type="submit" value="Купить">
         </form>
+        
+        <p class="pull-right" style="margin-top:16px;margin-bottom:0;"><a href="/pro/license.html">Лицензия</a></p>
 
         <div style="margin-top: 15px;text-align: left;">
             <span style="color: #999;">Принимаем:</span>
