--- a/_layouts/default-ru.html
+++ b/_layouts/default-ru.html
@@ -37,7 +37,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-        <nav class="navbar navbar-fixed-top" role="navigation">
+        <nav class="navbar" role="navigation">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
