--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,10 @@
     background-color: #333;
 }
 
-.navbar-nav .active a {
-    background-color: #fff;
-    color: #666;
+.navbar-nav .active a,
+.navbar-nav .active a:hover {
+    background-color: #ccc;
+    color: #fff;
 }
 
 .navbar .navbar-nav>.open>a, 
@@ -23,7 +24,14 @@
 .jumbotron {
     padding-top: 10px;
     padding-bottom: 20px;
-    border-bottom: solid 4px #ccc;
+}
+
+.jumbotron h1 {
+    margin-top: 0px;
+}
+
+.underlined {
+    border-bottom: solid 2px #ccc;
 }
 
 @media(max-width: 991px) {
@@ -236,10 +244,80 @@ a.anchor {
     color: #fff;
 }
 
-.jumbotron-small h1 {
-    margin-top: 10px;
-}
-
 .first-header {
     margin-top: 0;
+}
+
+.plan {
+    text-align: center;
+    background-color: #fff;
+    padding-bottom: 30px;
+}
+
+.plan .plan-title {
+    background-color: #999;
+    color: #fff;
+    padding: 12px 16px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.plan .plan-body {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border: solid 1px #ccc;
+    border-top: none;
+    padding: 20px;
+}
+
+.plan .plan-title h2 {
+    margin: 0;
+    font-weight: lighter;
+}
+
+.plan .plan-items {
+    text-align: left;
+    padding-left: 30px;
+}
+
+.plan .plan-items > * {
+    margin-bottom: 10px;
+}
+
+.plan .plan-item-spacer {
+    visibility: hidden;
+}
+
+.plan .plan-price {
+    margin: 20px 0;
+    border-top: solid 1px #ddd;
+}
+
+.plan .plan-price h3 {
+    font-size: 40px;
+    vertical-align: top;
+    line-height: 1;
+    font-weight: lighter;
+    text-transform: uppercase;
+}
+
+.plan .plan-price h3 span {
+    font-size: 20px;
+    vertical-align: top;
+    position: relative;
+    margin: 6px 0 0 -7px;
+    display: inline-block;
+}
+
+.plan .plan-price h4 {
+    color: #666;
+    font-size: 14px;
+    font-weight: lighter;
+    text-transform: lowercase;
+}
+
+.plan .btn {
+    padding: 10px 40px;
+    text-transform: uppercase;
+    font-weight: lighter;
 }
