--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-        <nav class="navbar" role="navigation">
+        <nav class="navbar {% if page.nav_underlined %}underlined{% endif %}" role="navigation">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -54,11 +54,26 @@
             </div>
             <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="http://odinserj.net">Blog</a></li>
-                <li><a href="http://docs.hangfire.io">Documentation</a></li>
-                <li><a href="http://discuss.hangfire.io">Forum</a></li>
-                <li><a href="https://www.nuget.org/packages?q=Hangfire">NuGet Packages</a></li>
-                <li><a href="https://github.com/HangfireIO/Hangfire">Sources on GitHub</a></li>
+                <li class="dropdown dropdown-auto {% if page.active == 'products' %}active{% endif %}">
+                  <a href="/products.html">Products</a>
+                  <ul class="dropdown-menu dropdown-menu-left" role="menu">
+                    <li><a href="/core/">Hangfire Core</a></li>
+                    <li><a href="/pro/">Hangfire Pro</a></li>
+                    <li class="disabled"><a href="#">Extensions</a></li>
+                  </ul>
+                </li>
+                <li {% if page.active == 'pricing' %}class="active"{% endif %}><a href="/pricing.html">Pricing</a></li>
+                <li {% if page.active == 'documentation' %}class="active"{% endif %}><a href="/documentation.html">Documentation</a></li>
+                <li {% if page.active == 'support' %}class="active"{% endif %}><a href="/support.html">Support</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="http://odinserj.net">Blog</a></li>
+                    <li><a href="http://discuss.hangfire.io">Forum</a></li>
+                    <li><a href="https://www.nuget.org/packages?q=Hangfire">NuGet Packages</a></li>
+                    <li><a href="https://github.com/HangfireIO">Sources on GitHub</a></li>
+                  </ul>
+                </li>
               </ul>
             </div>
           </div>
@@ -68,11 +83,6 @@
         
         <footer>
           <div class="container">
-            <p class="pull-right">
-              <span>English</span>
-              &bull;
-              <a href="/ru/">Русский</a>
-            </p>
             <p>
               Hangfire &copy; 2013-2014 <a href="https://github.com/odinserj">Sergey Odinokov</a>
             </p>
