--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,10 +59,10 @@
                   <ul class="dropdown-menu dropdown-menu-left" role="menu">
                     <li><a href="/core/">Hangfire Core</a></li>
                     <li><a href="/pro/">Hangfire Pro</a></li>
-                    <li class="disabled"><a href="#">Extensions</a></li>
+                    <li><a href="/extensions/">Extensions</a></li>
                   </ul>
                 </li>
-                <li {% if page.active == 'pricing' %}class="active"{% endif %}><a href="/pricing.html">Pricing</a></li>
+                <li {% if page.active == 'purchase' %}class="active"{% endif %}><a href="/purchase.html">Purchase</a></li>
                 <li {% if page.active == 'documentation' %}class="active"{% endif %}><a href="/documentation.html">Documentation</a></li>
                 <li {% if page.active == 'support' %}class="active"{% endif %}><a href="/support.html">Support</a></li>
                 <li class="dropdown">
