--- a/_layouts/pro.html
+++ b/_layouts/pro.html
@@ -21,6 +21,7 @@ active: products
                 <ul class="nav nav-pills nav-stacked">
                     <li {% if page.sub_active == 'overview' %}class="active"{% endif %}><a href="/pro/">Overview</a></li>
                     <li {% if page.sub_active == 'features' %}class="active"{% endif %}><a href="/pro/features.html">Features</a></li>
+                    <li {% if page.sub_active == 'comparison' %}class="active"{% endif %}><a href="/pro/comparison.html">Feature Comparison</a></li>
                     <li {% if page.sub_active == 'faq' %}class="active"{% endif %}><a href="/pro/faq.html">FAQ</a></li>
                     <li {% if page.sub_active == 'license' %}class="active"{% endif %}><a href="/pro/license.html">License</a></li>
                     <li {% if page.sub_active == 'download' %}class="active"{% endif %}><a href="/pro/download.html">Download</a></li>
