--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,8 +19,9 @@
       <div class="col-md-3">
         <h4>Documentation</h4>
         <ul class="list-unstyled">
-          <li><a href="#">Quick Start</a></li>
-          <li><a href="#">User's Guide</a></li>
+          <li><a href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a></li>
+          <li><a href="http://docs.hangfire.io/en/latest/users-guide/index.html">User's Guide</a></li>
+          <li><a href="http://docs.hangfire.io/en/latest/tutorials/index.html">Tutorials</a></li>
         </ul>
       </div>
       <div class="col-md-3">
