--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,9 +28,9 @@
         <h4>Resources</h4>
         <ul class="list-unstyled">
           <li><a href="http://odinserj.net/" target="_blank">Blog <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a></li>
-          <li><a href="http://discuss.hangfire.io/" target="_blank">Forum <span class="glyphicon glyphicon-small glyphicon-new-window"></a></li>
-          <li><a href="https://www.nuget.org/packages?q=Hangfire" target="_blank">NuGet Packages <span class="glyphicon glyphicon-small glyphicon-new-window"></a></li>
-          <li><a href="https://github.com/HangfireIO" target="_blank">Sources on GitHub <span class="glyphicon glyphicon-small glyphicon-new-window"></a></li>
+          <li><a href="http://discuss.hangfire.io/" target="_blank">Forum <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a></li>
+          <li><a href="https://www.nuget.org/packages?q=Hangfire" target="_blank">NuGet Packages <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a></li>
+          <li><a href="https://github.com/HangfireIO" target="_blank">Sources on GitHub <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a></li>
         </ul>
       </div>
     </div>
