--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <ul class="nav navbar-nav navbar-right">
   <li class="dropdown dropdown-auto {% if page.active == 'products' %}active{% endif %}">
-    <a href="/products.html">Products <span class="caret"></a>
+    <a href="/core/">Products <span class="caret"></a>
     <ul class="dropdown-menu dropdown-menu-left" role="menu">
       <li><a href="/core/">Hangfire Core</a></li>
       <li><a href="/pro/">Hangfire Pro</a></li>
@@ -17,16 +17,16 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu">
       <li>
-        <a href="http://odinserj.net" target="_blank">Blog <span class="glyphicon glyphicon-small glyphicon-new-window"></a>
+        <a href="http://odinserj.net" target="_blank">Blog <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a>
       </li>
       <li>
-        <a href="http://discuss.hangfire.io" target="_blank">Forum <span class="glyphicon glyphicon-small glyphicon-new-window"></a>
+        <a href="http://discuss.hangfire.io" target="_blank">Forum <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a>
       </li>
       <li>
-        <a href="https://www.nuget.org/packages?q=Hangfire" target="_blank">NuGet Packages <span class="glyphicon glyphicon-small glyphicon-new-window"></a>
+        <a href="https://www.nuget.org/packages?q=Hangfire" target="_blank">NuGet Packages <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a>
       </li>
       <li>
-        <a href="https://github.com/HangfireIO" target="_blank">Sources on GitHub <span class="glyphicon glyphicon-small glyphicon-new-window"></a>
+        <a href="https://github.com/HangfireIO" target="_blank">Sources on GitHub <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a>
       </li>
     </ul>
   </li>
