--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -11,20 +11,19 @@ nav_underlined: true
         <div class="col-md-3">
             <div class="well">
                 <h4>Hangfire Core</h4>
-                <ul class="nav nav-pills nav-stacked">
+                <ul class="nav nav-pills nav-stacked nav-compact">
                     <li {% if page.sub_active == 'core-overview' %}class="active"{% endif %}><a href="/core/">Overview</a></li>
                     <li {% if page.sub_active == 'core-features' %}class="active"{% endif %}><a href="/core/features.html">Features</a></li>
                     <li {% if page.sub_active == 'core-license' %}class="active"{% endif %}><a href="/core/license.html">Licensing</a></li>
                     <li {% if page.sub_active == 'core-download' %}class="active"{% endif %}><a href="/core/download.html">Downloads</a></li>
                 </ul>
-                <h4>Hangfire Pro</h4>
-                <ul class="nav nav-pills nav-stacked">
+                <h4>Hangfire Pro <small>Beta</small></h4>
+                <ul class="nav nav-pills nav-stacked nav-compact">
                     <li {% if page.sub_active == 'pro-overview' %}class="active"{% endif %}><a href="/pro/">Overview</a></li>
                     <li {% if page.sub_active == 'pro-license' %}class="active"{% endif %}><a href="/pro/license.html">License</a></li>
-                    <li {% if page.sub_active == 'pro-download' %}class="active"{% endif %}><a href="/pro/download.html">Download</a></li>
                 </ul>
                 <h4>Extensions</h4>
-                <ul class="nav nav-pills nav-stacked">
+                <ul class="nav nav-pills nav-stacked nav-compact">
                     <li {% if page.sub_active == 'ext-official' %}class="active"{% endif %}><a href="/extensions/">Official</a></li>
                     <li {% if page.sub_active == 'ext-3rdparty' %}class="active"{% endif %}><a href="/extensions/third-party.html">Third-Party</a></li>
                 </ul>
@@ -32,7 +31,7 @@ nav_underlined: true
         </div>
         <div class="col-md-9">
             <h1 class="page-header">
-                {{ page.title }}
+                {{ page.title }} {% if page.beta %}<small>Beta</small>{% endif %}
             </h1>
 
             {{ content }}
