--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
       <div class="col-md-3">
         <h4>Services</h4>
         <ul class="list-unstyled">
-          <li><a href="/purchase.html">Subscriptions</a></li>
-          <li><a href="/support.html">Support</a></li>
+          <li><a href="/subscriptions/">Subscriptions</a></li>
+          <li><a href="/support/">Support</a></li>
         </ul>
       </div>
       <div class="col-md-3">
