--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -17,7 +17,7 @@ nav_underlined: true
                     <li {% if page.sub_active == 'core-license' %}class="active"{% endif %}><a href="/core/license.html">Licensing</a></li>
                     <li {% if page.sub_active == 'core-download' %}class="active"{% endif %}><a href="/core/download.html">Downloads</a></li>
                 </ul>
-                <h4>Hangfire Pro <small>Beta</small></h4>
+                <h4>Hangfire Pro <small>Alpha</small></h4>
                 <ul class="nav nav-pills nav-stacked nav-compact">
                     <li {% if page.sub_active == 'pro-overview' %}class="active"{% endif %}><a href="/pro/">Overview</a></li>
                     <li {% if page.sub_active == 'pro-license' %}class="active"{% endif %}><a href="/pro/license.html">License</a></li>
@@ -31,7 +31,7 @@ nav_underlined: true
         </div>
         <div class="col-md-9">
             <h1 class="page-header">
-                {{ page.title }} {% if page.beta %}<small>Beta</small>{% endif %}
+                {{ page.title }} {% if page.beta %}<small>Alpha</small>{% endif %}
             </h1>
 
             {{ content }}
