Reorder footer links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,13 +7,7 @@
           <li><a href="/core/">Hangfire Core</a></li>
           <li><a href="/pro/">Hangfire Pro</a></li>
           <li><a href="/extensions/">Extensions</a></li>
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <h4>Services</h4>
-        <ul class="list-unstyled">
           <li><a href="/subscriptions/">Subscriptions</a></li>
-          <li><a href="/support/">Support</a></li>
         </ul>
       </div>
       <div class="col-md-3">
@@ -25,12 +19,19 @@
         </ul>
       </div>
       <div class="col-md-3">
-        <h4>Resources</h4>
+        <h4>Community</h4>
         <ul class="list-unstyled">
-          <li><a href="http://odinserj.net/" target="_blank">Blog <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a></li>
-          <li><a href="http://discuss.hangfire.io/" target="_blank">Forum <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a></li>
-          <li><a href="https://www.nuget.org/packages?q=Hangfire" target="_blank">NuGet Packages <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a></li>
-          <li><a href="https://github.com/HangfireIO" target="_blank">Sources on GitHub <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a></li>
+          <li><a href="http://discuss.hangfire.io/">Forum</a></li>
+          <li><a href="https://github.com/HangfireIO">Projects on GitHub</a></li>
+          <li><a href="http://stackoverflow.com/tags/hangfire">Stack Overflow</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h4>Connect</h4>
+        <ul class="list-unstyled">
+          <li><a href="http://odinserj.net/">Blog</a></li>
+          <li><a href="https://twitter.com/hangfire_net">Twitter</a></li>
+          <li><a href="mailto:support@hangfire.io">Support</a></li>
         </ul>
       </div>
     </div>
