Change top navigation menu

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
           <li><a href="/core/">Hangfire Core</a></li>
           <li><a href="/pro/">Hangfire Pro</a></li>
           <li><a href="/extensions/">Extensions</a></li>
-          <li><a href="/subscriptions/">Subscriptions</a></li>
+          <li><a href="/pricing/">Pricing</a></li>
         </ul>
       </div>
       <div class="col-md-3">
@@ -27,7 +27,7 @@
         </ul>
       </div>
       <div class="col-md-3">
-        <h4>Connect</h4>
+        <h4>Contact</h4>
         <ul class="list-unstyled">
           <li><a href="http://odinserj.net/">Blog</a></li>
           <li><a href="https://twitter.com/hangfire_net">Twitter</a></li>
