--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,27 +7,19 @@
       <li><a href="/extensions/">Extensions</a></li>
     </ul>
   </li>
-  <li {% if page.active == 'subscriptions' %}class="active"{% endif %}>
-    <a href="/subscriptions/">Subscriptions</a>
+  <li {% if page.active == 'pricing' %}class="active"{% endif %}>
+    <a href="/pricing/">Pricing</a>
   </li>
-  <li {% if page.active == 'support' %}class="active"{% endif %}>
-    <a href="/support/">Docs &amp; Support</a>
+  <li>
+    <a href="http://docs.hangfire.io/">Documentation</a>
   </li>
-  <li class="dropdown dropdown-auto">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <span class="caret"></span></a>
-    <ul class="dropdown-menu" role="menu">
-      <li>
-        <a href="http://odinserj.net" target="_blank">Blog <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a>
-      </li>
-      <li>
-        <a href="http://discuss.hangfire.io" target="_blank">Forum <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a>
-      </li>
-      <li>
-        <a href="https://www.nuget.org/packages?q=Hangfire" target="_blank">NuGet Packages <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a>
-      </li>
-      <li>
-        <a href="https://github.com/HangfireIO" target="_blank">Sources on GitHub <span class="glyphicon glyphicon-small glyphicon-new-window"></span></a>
-      </li>
-    </ul>
+  <li>
+    <a href="http://discuss.hangfire.io">Forum</a>
+  </li>
+  <li>
+    <a href="http://odinserj.net">Blog</a>
+  </li>
+  <li>
+    <a href="https://github.com/HangfireIO">Source Code</a>
   </li>
 </ul>
