Styling for side navigation

--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -9,7 +9,7 @@ nav_underlined: true
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <div class="well">
+            <div class="nav nav-side">
                 <h4>Hangfire Core</h4>
                 <ul class="nav nav-pills nav-stacked nav-compact">
                     <li {% if page.sub_active == 'core-overview' %}class="active"{% endif %}><a href="/core/">Overview</a></li>
