Rename "Hangfire Core" just to "Hangfire"
"Hangfire Core" sounds as a version with very few, basic functionality,
especially when comparing to "Hangfire Pro". However, this is wrong,
because Hangfire is all-sufficient, and Hangfire Pro is an extension.

--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -10,12 +10,12 @@ nav_underlined: true
     <div class="row">
         <div class="col-md-3">
             <div class="nav nav-side">
-                <h4>Hangfire Core</h4>
+                <h4>Hangfire</h4>
                 <ul class="nav nav-pills nav-stacked nav-compact">
-                    <li {% if page.sub_active == 'core-overview' %}class="active"{% endif %}><a href="/core/">Overview</a></li>
-                    <li {% if page.sub_active == 'core-features' %}class="active"{% endif %}><a href="/core/features.html">Features</a></li>
-                    <li {% if page.sub_active == 'core-license' %}class="active"{% endif %}><a href="/core/license.html">Licensing</a></li>
-                    <li {% if page.sub_active == 'core-download' %}class="active"{% endif %}><a href="/core/download.html">Downloads</a></li>
+                    <li {% if page.sub_active == 'overview' %}class="active"{% endif %}><a href="/overview.html">Overview</a></li>
+                    <li {% if page.sub_active == 'features' %}class="active"{% endif %}><a href="/features.html">Features</a></li>
+                    <li {% if page.sub_active == 'licensing' %}class="active"{% endif %}><a href="/licensing.html">Licensing</a></li>
+                    <li {% if page.sub_active == 'downloads' %}class="active"{% endif %}><a href="/downloads.html">Downloads</a></li>
                 </ul>
                 <h4>Hangfire Pro</h4>
                 <ul class="nav nav-pills nav-stacked nav-compact">
