--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 <ul class="nav navbar-nav navbar-right">
   <li class="dropdown dropdown-auto {% if page.active == 'products' %}active{% endif %}">
-    <a href="/core/">Products <span class="caret"></span></a>
+    <a href="/overview.html">Products <span class="caret"></span></a>
     <ul class="dropdown-menu dropdown-menu-left" role="menu">
-      <li><a href="/core/">Hangfire Core</a></li>
+      <li><a href="/overview.html">Hangfire</a></li>
       <li><a href="/pro/">Hangfire Pro</a></li>
       <li><a href="/extensions/">Extensions</a></li>
     </ul>
