--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -33,6 +33,10 @@ active: products
             </h1>
 
             {{ content }}
+
+            <div class="alert alert-info" style="margin-top: 20px;margin-bottom:0;">
+            Did you know that you can <a href="{{site.github_repo_root}}/{{page.virtual_path | replace:'\\','/'}}" target="_blank">edit this page on GitHub</a> and send a Pull Request?
+        </div>
         </div>
     </div>
 </div>
