Yet another fix for edit button

--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -35,7 +35,7 @@ active: products
             {{ content }}
 
             <div class="alert alert-info" style="margin-top: 20px;margin-bottom:0;">
-            Did you know that you can <a href="{{site.github_repo_root}}/edit/{{ page.path }}" target="_blank">edit this page on GitHub</a> and send a Pull Request?
+            Did you know that you can <a href="{{site.github_repo_root}}/{{ page.path }}" target="_blank">edit this page on GitHub</a> and send a Pull Request?
         </div>
         </div>
     </div>
