Autolink GA with fastspring

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,8 @@
 
   ga('create', 'UA-45386460-1', 'hangfire.io');
   ga('send', 'pageview');
-
+  ga('require', 'linker');
+  ga('linker:autoLink', ['fastspring.com']);
 </script>
     </head>
     <body>
