--- a/css/hangfire.css
+++ b/css/hangfire.css
@@ -66,6 +66,7 @@ footer {
   text-shadow: 0 1px 0 #fff;
   background-color: #f5f5f5;
   border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 .bs-sidenav h4 {
