--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
-    <div class="row hidden-xs">
-      <div class="col-sm-3">
+    <div class="row">
+      <div class="col-sm-3 col-xs-6">
         <h4>Products</h4>
         <ul class="list-unstyled">
           <li><a href="/overview.html">Hangfire</a></li>
@@ -9,7 +9,7 @@
           <li><a href="/pricing/">Pricing</a></li>
         </ul>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 col-xs-6">
         <h4>Documentation</h4>
         <ul class="list-unstyled">
           <li><a href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a></li>
@@ -17,7 +17,7 @@
           <li><a href="http://docs.hangfire.io/en/latest/tutorials/index.html">Tutorials</a></li>
         </ul>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 col-xs-6">
         <h4>Community</h4>
         <ul class="list-unstyled">
           <li><a href="http://discuss.hangfire.io/">Forum</a></li>
@@ -25,7 +25,7 @@
           <li><a href="http://stackoverflow.com/tags/hangfire">Stack Overflow</a></li>
         </ul>
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 col-xs-6">
         <h4>Contact</h4>
         <ul class="list-unstyled">
           <li><a href="http://eepurl.com/9iQNf" target="_blank">Newsletter</a></li>
