--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ pre .comm {
 [id^=___plusone] { width:62px !important; }
 
 .fb-share-button {
-    vertical-align: super;
+    vertical-align: bottom;
     margin-right: 5px;
     margin-bottom: 5px;
 }
