Product blog is now on hangfire.io

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,8 +11,8 @@
   <li>
     <a href="http://discuss.hangfire.io">Forum</a>
   </li>
-  <li>
-    <a href="http://odinserj.net">Blog</a>
+  <li {% if page.active == 'blog' %}class="active"{% endif %}>
+    <a href="/blog/">Blog</a>
   </li>
   <li>
     <a href="https://github.com/HangfireIO">Source Code</a>
