--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
         <h4>Contact</h4>
         <ul class="list-unstyled">
           <li><a href="http://eepurl.com/9iQNf" target="_blank">Newsletter</a></li>
-          <li><a href="http://odinserj.net/">Blog</a></li>
+          <li><a href="/blog/">Blog</a></li>
           <li><a href="https://twitter.com/hangfire_net">Twitter</a></li>
           <li><a href="mailto:support@hangfire.io">Support</a></li>
         </ul>
