--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
         <link href="/css/highlight.css" rel="stylesheet">
         <link href="/css/hangfire.css" rel="stylesheet">
         <link href="/css/styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -79,5 +80,7 @@
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="/js/bootstrap.min.js"></script>
         <script src="/js/lightbox.min.js"></script>
+
+        {% include disqus.html %}
     </body>
 </html>
