--- a/css/hangfire.css
+++ b/css/hangfire.css
@@ -32,8 +32,8 @@ footer {
 
 .navbar-hangfire .navbar-nav .active>a, 
 .navbar-hangfire .navbar-nav .active>a:hover {
-  background-color: #ccc;
-  color: #fff;
+    background-color: #ccc;
+    color: #fff;
 }
 
 .navbar-hangfire .icon-bar {
@@ -52,69 +52,100 @@ footer {
 }
 
 .bs-sidenav form, .bs-sidenav #sourcelink {
-  padding: 5px 20px;
+    padding: 5px 20px;
 }
 
 /* First level of nav */
 .bs-sidenav {
-  padding-top:    10px;
-  padding-bottom: 10px;
-  text-shadow: 0 1px 0 #fff;
-  background-color: #f5f5f5;
-  border-radius: 5px;
-  margin-bottom: 20px;
+    padding-top:    10px;
+    padding-bottom: 10px;
+    text-shadow: 0 1px 0 #fff;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    margin-bottom: 20px;
 }
 
-.bs-sidenav h4 {
-  margin: 5px 20px 7px;
-  color: #888;
-  font-size: 20px;
-  padding-bottom: 7px;
-  border-bottom: solid 1px #ddd;
+.bs-sidenav div {
+    margin: 5px 20px 7px;
+    color: #888;
+}
+
+.bs-sidenav > h4 {
+    margin: 5px 20px 7px;
+    color: #888;
+    font-size: 20px;
+    padding-bottom: 7px;
+    border-bottom: solid 1px #ddd;
 }
 
 .bs-sidenav > .nav {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 /* All levels of nav */
 .bs-sidenav .nav > li > a {
-  display: block;
-  color: #428bca;
-  padding: 5px 20px;
+    display: block;
+    color: #428bca;
+    padding: 5px 20px;
 }
 .bs-sidenav .nav > li > a:hover,
 .bs-sidenav .nav > li > a:focus {
-  text-decoration: none;
-  background-color: #e5e3e9;
-  border-right: 1px solid #dbd8e0;
+    text-decoration: none;
+    background-color: #e5e3e9;
+    border-right: 1px solid #dbd8e0;
 }
 
 .bs-sidenav .nav .nav > li > a {
-  padding-top:    3px;
-  padding-bottom: 3px;
-  padding-left: 40px;
-  font-size: 90%;
+    padding-top:    3px;
+    padding-bottom: 3px;
+    padding-left: 40px;
+    font-size: 90%;
 }
 
 .bs-sidenav .nav .nav .nav > li > a {
-  padding-top:    3px;
-  padding-bottom: 3px;
-  padding-left: 40px;
-  font-size: 90%;
+    padding-top:    3px;
+    padding-bottom: 3px;
+    padding-left: 40px;
+    font-size: 90%;
 }
 
 .bs-sidenav .nav .nav .nav .nav > li > a {
-  padding-top:    3px;
-  padding-bottom: 3px;
-  padding-left: 50px;
-  font-size: 90%;
+    padding-top:    3px;
+    padding-bottom: 3px;
+    padding-left: 50px;
+    font-size: 90%;
 }
 
 .bs-sidenav .nav > li.active > a,
 .bs-sidenav .nav > li.active > a:hover,
 .bs-sidenav .nav > li.active > a:focus {
-  color: #fff;
-  background-color: #428bca;
-  text-shadow: none;
+    color: #fff;
+    background-color: #428bca;
+    text-shadow: none;
+}
+
+.article-title a {
+    color: inherit;
+}
+
+.article-title a:hover {
+    color: #2a6496;
+    text-decoration: none;
+}
+
+article {
+    font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+article p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    text-align: justify;
+}
+
+article img {
+    text-align: center;
+    max-width: 100%;
 }
