Add role attribute for products page

--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -5,7 +5,7 @@ active: overview
 
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3" role="complementary">
             <div class="bs-sidenav">
                 <h4>Hangfire</h4>
                 <ul class="nav">
@@ -22,7 +22,7 @@ active: overview
                 </ul>
             </div>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9" role="main">
             <h1 class="page-header">
                 {{ page.title }}
             </h1>
