Hiding sidebars from printing

--- a/_includes/blog/sidebar.html
+++ b/_includes/blog/sidebar.html
@@ -1,4 +1,4 @@
-<div class="bs-sidenav">
+<div class="bs-sidenav hidden-print">
 	{% include blog/recent.html %}
 	{% include blog/related.html %}
 </div>
