--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -6,7 +6,7 @@ active: overview
 <div class="container">
     <div class="row">
         <div class="col-md-3" role="complementary">
-            <div class="bs-sidenav">
+            <div class="bs-sidenav hidden-print">
                 <h4>Hangfire</h4>
                 <ul class="nav">
                     <li {% if page.sub_active == 'overview' %}class="active"{% endif %}><a href="/overview.html">Overview</a></li>
