Hiding footer and edit notice

--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -29,7 +29,7 @@ active: overview
 
             {{ content }}
 
-            <div class="alert alert-info" style="margin-top: 20px;margin-bottom:0;">
+            <div class="alert alert-info hidden-print" style="margin-top: 20px;margin-bottom:0;">
             Did you know that you can <a href="{{site.github_repo}}/edit/master/{{ page.path }}" target="_blank">edit this page on GitHub</a> and send a Pull Request?
         </div>
         </div>
