--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
         {% endif %}
         <meta name="twitter:site" content="@hangfireio">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="Hangfire">
-        <meta name="twitter:description" content="Incredibly easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage">
+        <meta name="twitter:title" content="Hangfire – Background jobs for ASP.NET">
+        <meta name="twitter:description" content="Incredibly easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
 
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link href="/css/lightbox.css" rel="stylesheet">
