--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Hangfire – Background Jobs for ASP.NET">
         <meta name="twitter:description" content="Incredibly easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
+        <meta name="twitter:image:src" content="http://hangfire.io/img/dashboard-sm.png">
 
         <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link href="/css/lightbox.css" rel="stylesheet">
