--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         <meta name="description" content="{{ page.description }}">
         {% endif %}
         <meta name="twitter:site" content="@hangfireio">
-        <meta name="twitter:card" content="summary">
+        <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Hangfire – Background Jobs for ASP.NET">
         <meta name="twitter:description" content="Incredibly easy way to perform fire-and-forget, delayed and recurring tasks in ASP.NET applications. No Windows Service required, backed by persistent storage.">
         <meta name="twitter:image:src" content="http://hangfire.io/img/dashboard-sm.png">
