--- a/_includes/blog/subtitle.html
+++ b/_includes/blog/subtitle.html
@@ -1,8 +1,28 @@
 <ul class="post-meta">
-	<li>{% include blog/date.html %}</li>
-	<li>{% include blog/tags.html %}</li>
-	{% if site.disqus_short_name and site.disqus_show_comment_count == true %}
-	<li>{% include blog/comments.html %}</li>
+	{% capture date %}{{ page.date }}{{ post.date }}{% endcapture %}
+	{% if date.size > 0 %}
+	<li>		
+  		<i class="glyphicon glyphicon-calendar"></i>&nbsp;<time datetime="{{ date | datetime | date_to_xmlschema }}" itemprop="datePublished">{{ date | date: "%B %e, %Y" }}</time>
+	</li>
 	{% endif %}
+
+	{% capture tags %}{{ page.tags | join: ', ' }}{{ post.tags | join: ', ' }}{% endcapture %}
+	{% if tags.size > 0 %}
+	<li>
+		<i class="glyphicon glyphicon-tag"></i>&nbsp;<span>{{ tags }}</span>
+	</li>
+	{% endif %}
+
+	{% if site.disqus_short_name and site.disqus_show_comment_count == true %}
+		{% if post.disqus_identifier %}
+	  		{% assign disqus_identifier = post.disqus_identifier %}
+		{% else %}
+  			{% assign disqus_identifier = page.disqus_identifier %}
+		{% endif %}
+	<li>
+		<i class="glyphicon glyphicon-comment"></i>&nbsp;<a href="{{ post.url }}#disqus_thread"{% if disqus_identifier %} data-disqus-identifier="{{ disqus_identifier }}"{% endif %}>0 Comments</a>
+	</li>
+	{% endif %}
+
 	<li class="pull-right">{% include edit.html %}</li>
 </ul>
