--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
           <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/hangfireio">
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
