--- a/_includes/blog/recent.html
+++ b/_includes/blog/recent.html
@@ -7,9 +7,7 @@
     {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
 
     {% if forloop.first %}
-    <!-- Uncomment in 2015
-    <h3 id="{{ this_year }}-ref">{{this_year}}</h3> -->
-    <h4 id="{{ this_year }}-{{ this_month }}-ref">{{ this_month }}</h4>
+    <h4 id="{{ this_year }}-{{ this_month }}-ref">{{ this_month }} {{this_year}}</h4>
     <ul>
     {% endif %}
 
@@ -20,13 +18,12 @@
     {% else %}
         {% if this_year != next_year %}
         </ul>
-        <h2 id="{{ next_year }}-ref">{{next_year}}</h2>
-        <h4 id="{{ next_year }}-{{ next_month }}-ref">{{ next_month }}</h4>
+        <h4 id="{{ next_year }}-{{ next_month }}-ref">{{ next_month }} {{next_year}}</h4>
         <ul>
         {% else %}    
             {% if this_month != next_month %}
             </ul>
-            <h4 id="{{ this_year }}-{{ next_month }}-ref">{{ next_month }}</h4>
+            <h4 id="{{ this_year }}-{{ next_month }}-ref">{{ next_month }} {{next_year}}</h4>
             <ul>
             {% endif %}
         {% endif %}
