--- a/_includes/blog/recent.html
+++ b/_includes/blog/recent.html
@@ -1,32 +1,34 @@
-<h4>Recent Posts</h4>
-<div>
-{% for post in site.posts  %}
-    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-    {% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
-    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
-    {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
+<div class="bs-sidenav hidden-print">
+    <h4>Recent Posts</h4>
+    <div>
+    {% for post in site.posts  %}
+        {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+        {% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
+        {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
+        {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
 
-    {% if forloop.first %}
-    <h5 id="{{ this_year }}-{{ this_month }}-ref">{{ this_month }} {{this_year}}</h5>
-    <ul>
-    {% endif %}
-
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-
-    {% if forloop.last %}
-    </ul>
-    {% else %}
-        {% if this_year != next_year %}
-        </ul>
-        <h5 id="{{ next_year }}-{{ next_month }}-ref">{{ next_month }} {{next_year}}</h5>
+        {% if forloop.first %}
+        <h5 id="{{ this_year }}-{{ this_month }}-ref">{{ this_month }} {{this_year}}</h5>
         <ul>
-        {% else %}    
-            {% if this_month != next_month %}
+        {% endif %}
+
+        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+
+        {% if forloop.last %}
+        </ul>
+        {% else %}
+            {% if this_year != next_year %}
             </ul>
-            <h5 id="{{ this_year }}-{{ next_month }}-ref">{{ next_month }} {{next_year}}</h5>
+            <h5 id="{{ next_year }}-{{ next_month }}-ref">{{ next_month }} {{next_year}}</h5>
             <ul>
+            {% else %}    
+                {% if this_month != next_month %}
+                </ul>
+                <h5 id="{{ this_year }}-{{ next_month }}-ref">{{ next_month }} {{next_year}}</h5>
+                <ul>
+                {% endif %}
             {% endif %}
         {% endif %}
-    {% endif %}
-{% endfor %}
+    {% endfor %}
+    </div>
 </div>
