--- a/_includes/blog/related.html
+++ b/_includes/blog/related.html
@@ -1,12 +1,14 @@
 {% if site.related_posts.size > 0 %}
-<h4>Related Posts</h4>
-<ul class="related-posts">
-  {% for post in site.related_posts limit:3 %}
-    <li>
-      <a href="{{ post.url }}">
-        {{ post.title }}
-      </a>
-    </li>
-  {% endfor %}
-</ul>
+<div class="bs-sidenav hidden-print">
+	<h4>Related Posts</h4>
+	<ul class="related-posts">
+	  {% for post in site.related_posts limit:3 %}
+	    <li>
+	      <a href="{{ post.url }}">
+	        {{ post.title }}
+	      </a>
+	    </li>
+	  {% endfor %}
+	</ul>
+</div>
 {% endif %}
